--- a/Vidly/Views/Movies/Random.cshtml
+++ b/Vidly/Views/Movies/Random.cshtml
@@ -1,8 +1,11 @@
 ﻿@model Vidly.Models.Movie
+@using Vidly.Models
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>@Model.Name</h2>
+<h2>@(((Movie)ViewData["Movie"]).Name)</h2>
+<h2>@(((Movie)ViewBag.Movie).Name)</h2>
 
