--- a/Vidly/Views/Movies/Random.cshtml
+++ b/Vidly/Views/Movies/Random.cshtml
@@ -1,11 +1,9 @@
-﻿@model Vidly.Models.Movie
-@using Vidly.Models
+﻿@model Vidly.ViewModels.RandomMovieViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
-<h2>@(((Movie)ViewData["Movie"]).Name)</h2>
-<h2>@(((Movie)ViewBag.Movie).Name)</h2>
+<h2>@Model.Movie.Name</h2>
+
 
