--- a/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Views/Customers/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Vidly.Models.Customer
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = Model.Name;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -8,8 +8,8 @@
 
 <ul>
     <li>MembershipType: @Model.MembershipType.Name</li>
-    @if (Model.Birthdate != null)
+    @if (Model.Birthdate.HasValue)
     {
-        <li>Birthdate: @Model.Birthdate</li>
+        <li>Birthdate: @Model.Birthdate.Value.ToShortDateString()</li>
     }   
 </ul>
