--- a/Vidly/Views/Customers/New.cshtml
+++ b/Vidly/Views/Customers/New.cshtml
@@ -9,21 +9,22 @@
 @using(Html.BeginForm("Create", "Customers"))
 {
     <div class="form-group">
-        @Html.LabelFor(m => m.Customers.Name)
-        @Html.TextBoxFor(m => m.Customers.Name, new { @class = "form-control"})
+        @Html.LabelFor(m => m.Customer.Name)
+        @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control"})
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Customers.Birthdate)
-        @Html.TextBoxFor(m => m.Customers.Birthdate, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Customer.Birthdate)
+        @Html.TextBoxFor(m => m.Customer.Birthdate, new { @class = "form-control" })
     </div>
     <div class="checkbox">
         <label>
-            @Html.CheckBoxFor(m => m.Customers.IsSubscribedToNewsletter) Subscribed to Newsletter?
+            @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter) Subscribed to Newsletter?
         </label>        
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Customers.MembershipTypeId)
-        @Html.DropDownListFor(m => m.Customers.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control"})
+        @Html.LabelFor(m => m.Customer.MembershipTypeId)
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control"})
     </div>
+    <button type="submit" class="btn btn-primary">Save</button>
 }
 
