Sección 4 - Ejercicio Resuelto - Agregar formulario para crear/editar una película.

--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -15,6 +15,10 @@
 }
 
 <h2>Customers</h2>
+<p>
+    @Html.ActionLink("New Customer", "New", "Customer", new { @class = "btn btn-primary"})
+</p>
+
 @if (!Model.Any())
 {
     <p>We don't have any customers yet.</p>
