--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -11,10 +11,13 @@
         <label>Customer</label>
         <input id="customer" type="text" value="" class="form-control" />
     </div>
+
     <div class="form-group">
         <label>Movie</label>
         <input id="movie" type="text" value="" class="form-control" />
     </div>
+
+    <ul id="movies" class="list-group"></ul>
 
     <button class="btn btn-primary">Submit</button>
 </form>
@@ -22,7 +25,9 @@
 @section Scripts{
     <script>
         $(document).ready(function () {
-            var vm = {};
+            var vm = {
+                movieIds: []
+            };
 
             var customers = new Bloodhound({
                 datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
@@ -61,7 +66,11 @@
                     display: 'name',
                     source: movies
                 }).on("typeahead:select", function (e, movie) {
-                    vm.movieIds = movie.id;
+                    $("#movies").append("<li>" + movie.id + "</li>");
+
+                    $("#movie").typeahead("val", "");
+
+                    vm.movieIds.push(movie.id);
                 });
         });
     </script>    
