--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -1,7 +1,6 @@
 ﻿
 @{
     ViewBag.Title = "New Rentals";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>New Rentals</h2>
@@ -9,15 +8,23 @@
 <form>
     <div class="form-group">
         <label>Customer</label>
-        <input id="customer" type="text" value="" class="form-control" />
+        <div class="tt-container">
+            <input id="customer" type="text" value="" class="form-control" />
+        </div>        
     </div>
 
     <div class="form-group">
         <label>Movie</label>
-        <input id="movie" type="text" value="" class="form-control" />
+        <div class="tt-container">
+            <input id="movie" type="text" value="" class="form-control" />
+        </div>        
     </div>
 
-    <ul id="movies" class="list-group"></ul>
+    <div class="row">
+        <div class="col-md-4 col-sm-4">
+            <ul id="movies" class="list-group"></ul>
+        </div>
+    </div>
 
     <button class="btn btn-primary">Submit</button>
 </form>
@@ -66,7 +73,7 @@
                     display: 'name',
                     source: movies
                 }).on("typeahead:select", function (e, movie) {
-                    $("#movies").append("<li>" + movie.id + "</li>");
+                    $("#movies").append("<li class='list-group-item'>" + movie.id + "</li>");
 
                     $("#movie").typeahead("val", "");
 
