Submitting the Form.

--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -5,7 +5,7 @@
 
 <h2>New Rentals</h2>
 
-<form>
+<form id="newRental">
     <div class="form-group">
         <label>Customer</label>
         <div class="tt-container">
@@ -73,12 +73,28 @@
                     display: 'name',
                     source: movies
                 }).on("typeahead:select", function (e, movie) {
-                    $("#movies").append("<li class='list-group-item'>" + movie.id + "</li>");
+                    $("#movies").append("<li class='list-group-item'>" + movie.name + "</li>");
 
                     $("#movie").typeahead("val", "");
 
                     vm.movieIds.push(movie.id);
                 });
+
+            $("#newRental").submit(function (e) {
+                e.preventDefault();
+
+                $.ajax({
+                    url: "/api/newRentals",
+                    method: "post",
+                    data: vm
+                })
+                    .done(function () {
+                        console.log("done");
+                })
+                .fail(function () {
+
+                })
+            })
         });
     </script>    
 }
