Displaying toast notifications.

--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -88,11 +88,11 @@
                     method: "post",
                     data: vm
                 })
-                    .done(function () {
-                        console.log("done");
+                .done(function () {
+                    toastr.success("Rentals successfully recorded.");
                 })
                 .fail(function () {
-
+                    toastr.error("Something unexpected happend.");
                 })
             })
         });
